<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_corner_top">

    <LinearLayout
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:gravity="start|center_vertical"
            android:id="@+id/btn_temp_more_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_black_in_pop_window"
            android:text="@string/rename"
            />

        <Button
            android:gravity="start|center_vertical"
            android:id="@+id/btn_temp_more_duplicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_black_in_pop_window"
            android:text="@string/duplicate" />

        <Button
            android:gravity="start|center_vertical"
            android:id="@+id/btn_temp_more_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_black_in_pop_window"
            android:text="@string/event" />

        <Button
            android:gravity="start|center_vertical"
            android:id="@+id/btn_temp_more_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_black_in_pop_window"
            android:text="@string/delete"
            />

        <View
            android:background="@color/black"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Button
            android:gravity="start|center_vertical"
            android:id="@+id/btn_temp_more_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_black_in_pop_window"
            android:text="@string/cancel"
            />

    </LinearLayout>

</RelativeLayout>