<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/commentBackground"
    app:cardCornerRadius="24dp">

        <ImageView
            android:id="@+id/ic_hyperlink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="14dp"
            android:src="@mipmap/ic_hyperlink"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/add_url_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_hyperlink"
            android:layout_marginTop="14dp"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.65"
            android:textColor="@color/white"
            android:text="@string/add_view_url_title"
            android:lines="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText_set_slider_time"
        android:layout_marginTop="14dp"
        android:gravity="start|top"
        android:padding="12dp"
        android:background="@drawable/shape_round_corner_all"
        android:hint="@string/hyper_link"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/editTextHintColor"
        app:layout_constraintTop_toBottomOf="@+id/add_url_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.74"
        app:layout_constraintHeight_percent="0.4"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

        <Button
            android:id="@+id/btn_set_time_cancel"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/editText_set_slider_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_set_time_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/button_white_in_pop_window"
            android:text="@string/cancel"
            app:layout_constraintWidth_percent="0.33"
            />
    <Button
        android:id="@+id/btn_set_time_send"
        app:layout_constraintTop_toTopOf="@+id/btn_set_time_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_set_time_cancel"
        app:layout_constraintLeft_toRightOf="@+id/btn_set_time_cancel"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/ok"
        app:layout_constraintWidth_percent="0.33"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>